--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-icons": "^3.8.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-sweet-progress": "^1.1.2",
     "react-toggle": "^4.1.1",
     "semantic-ui-react": "^0.88.1",
     "styled-components": "^4.4.1"
