--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^16.12.0",
     "react-draggable-list": "^4.0.3",
     "react-icons": "^3.8.0",
+    "react-modal": "^3.11.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-sweet-progress": "^1.1.2",
